networking/allow-product-to-user.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-product-to-user
  namespace: my-services
spec:
  podSelector:
    matchLabels:
      app: user-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: product-service
      ports:
        - protocol: TCP
          port: 3000
  policyTypes:
    - Ingress
