networking/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: my-services
spec:
  podSelector: {}
  policyTypes:
    - Ingress
